CHANGED: Implementation of Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.
This stage added the pages to create resumes and vacancies. Creation of vacancies is limited to admin users, while resumes can be created by all logged users. This completes all objectives proposed for this project.

Also updated some of the CSS styles for the website.
Also added a logout handler.

Important files:
HyperJob Agency/task/static/css/base.css
HyperJob Agency/task/hyperjob/settings.py
HyperJob Agency/task/hyperjob/urls.py
HyperJob Agency/task/menu/templates/menu/home.html
HyperJob Agency/task/menu/templates/menu/index.html
HyperJob Agency/task/menu/views.py
HyperJob Agency/task/resume/templates/resume/index.html
HyperJob Agency/task/resume/templates/resume/new.html
HyperJob Agency/task/resume/views.py
HyperJob Agency/task/vacancy/templates/vacancy/index.html
HyperJob Agency/task/vacancy/templates/vacancy/new.html
HyperJob Agency/task/vacancy/views.py

--- a/HyperJob Agency/task/menu/templates/menu/index.html
+++ b/HyperJob Agency/task/menu/templates/menu/index.html
@@ -1,8 +1,9 @@
 {% extends "menu/base.html" %}
 {% block content %}
-  <a href="/login">Login</a>
-  <a href="/signup">Sign Up</a>
-  <a href="/vacancies">Vacancies</a>
-  <a href="/resumes">Resumes</a>
-  <a href="/home">Home</a>
+  <a href="/login" class="menu_label">Login</a>
+  <a href="/signup" class="menu_label">Sign Up</a>
+  <a href="/vacancies" class="menu_label">Vacancies</a>
+  <a href="/resumes" class="menu_label">Resumes</a>
+  <a href="/home" class="menu_label">Home</a>
+  <a href="/logout" class="menu_label">Logout</a>
 {% endblock %}
