--- a/HyperJob Agency/task/static/css/base.css
+++ b/HyperJob Agency/task/static/css/base.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 html {
-    background: #C70039;
+    background: #6600cc;
 }
 
 body {
@@ -13,7 +13,7 @@ body {
     background: #ffffff;
     line-height: 1.5;
 	font-family: 'Ubuntu', sans-serif;
-    border-radius: 0px 45px 0px 45px;
+    border-radius: 45px 45px 45px 45px;
 }
 
 form {
@@ -30,43 +30,33 @@ button {
     font-size: 15px;
 }
 
+input {
+    margin: 0px 5px 10px 5px;
+    padding: 10px 30px;
+    border-radius: 15px;
+    font-size: 15px;
+}
+
+p {
+    margin: 0px;
+    padding: 1%;
+    border-radius: 15px;
+    font-size: 20px;
+}
+
+.common_label {
+    margin: 20px 0px;
+}
+
 .menu_label {
-	border-radius: 0px 15px 0px 15px;
+	border-radius: 15px 15px 15px 15px;
     text-align: center;
     font-size: 20px;
-    padding: 1% 4%;
-	margin: 15px 5%;
-    font-size: 20px;
-	white-space:nowrap;
-	overflow: hidden;
-}
-
-.ticket_label {
-	background-color: #C70039;
-    color: #ffffff;
-	border-radius: 0px 15px 0px 15px;
-	margin: 15px 5%;
-    text-align: center;
-    font-size: 30px;
-	white-space:nowrap;
-	overflow: hidden;
-}
-
-.please_wait_label {
-    text-align: center;
-	margin: 15px 5%;
+    padding: 1%;
+	margin: 5px;
     font-size: 20px;
 	white-space:nowrap;
 	overflow: hidden;
-}
-
-.queue_label {
-    font-size: 20px;
-}
-
-.next_client_label {
-    text-align: center;
-    font-size: 45px;
 }
 
 .new_article {
@@ -82,7 +72,7 @@ button {
 }
 
 button:hover{
-    background-color: #C70039;
+    background-color: #6600cc;
 }
 
 a {
@@ -92,5 +82,5 @@ a {
 }
 
 a:hover{
-    color: #C70039;
+    color: #6600cc;
 }
