--- a/HyperJob Agency/task/vacancy/templates/vacancy/base.html
+++ b/HyperJob Agency/task/vacancy/templates/vacancy/base.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     <h2>Welcome to HyperJob!</h2>
+    <a href="/login" class="menu_label">Login</a>
+    <a href="/signup" class="menu_label">Sign Up</a>
+    <a href="/vacancies" class="menu_label">Vacancies</a>
+    <a href="/resumes" class="menu_label">Resumes</a>
+    <a href="/home" class="menu_label">Home</a>
+    <a href="/logout" class="menu_label">Logout</a>
     {% block content %} No content {% endblock %}
   </body>
 </html>
