--- a/HyperJob Agency/task/vacancy/templates/vacancy/index.html
+++ b/HyperJob Agency/task/vacancy/templates/vacancy/index.html
@@ -1,6 +1,6 @@
 {% extends "vacancy/base.html" %}
 {% block content %}
   {% for vacancy in vacancies %}
-    <div>{{ vacancy.author }}: {{ vacancy.description }}</div>
+    <div class="common_label">{{ vacancy.author }}: {{ vacancy.description }}</div>
   {% endfor %}
 {% endblock %}
